...
    <string name="hint_confirm_password">confirm password</string>

    <string name="button_login">Login</string>
    <string name="button_register">Register</string>

    <string name="text_user_not_registered">Not registered yet?</string>
    <string name="text_welcome_user_after_login">Welcome back,&#160;</string>
    <string name="text_welcome_user_after_register">Welcome on board,&#160;</string>
    <string name="text_goodbye_user_after_logout">Farewell,&#160;</string>
    <string name="text_login_failed">Authentication failed. Please, check your credentials…</string>
    <string name="text_register_failed">Registration failed. Please, check your input…</string>
    <string name="text_logout">Logout</string>
    <string name="text_add_to_cart_title">Add to Cart?</string>
    <string name="text_add_to_cart_message">The selected item will be added to cart. Are you sure?</string>
    <string name="text_remove_from_cart_title">Remove from Cart?</string>
    <string name="text_remove_from_cart_message">The selected item will be removed from cart. Are you sure?</string>
    <string name="text_dialog_ok">OK</string>
    <string name="text_dialog_cancel">Cancel</string>
    <string name="text_cart">Shopping Cart</string>
    <string name="text_categories">Categories</string>
    <string name="text_products">Products</string>
    <string name="text_cart_items">Cart Items</string>
    <string name="text_cart_items_details">Cart Items Details</string>
    <string name="text_total_items">Total Items:</string>
    <string name="text_zero">0</string>
    <string name="text_total_cost">Total Cost:</string>
...
