<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Logout-->
    <item
        android:id="@+id/menu_item_logout"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/text_logout"
        app:showAsAction="ifRoom" />

    <!--Shopping Cart-->
    <item
        android:id="@+id/menu_item_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/text_cart"
        app:showAsAction="always|collapseActionView" />

</menu>